load("@rules_go//go:def.bzl", "go_library")
load("@rules_python//python:defs.bzl", "py_library")
load("//tools/bazel:release.bzl", "release_app", "release_helm_chart")
load("//tools/openapi:openapi_client.bzl", "openapi_client")

# ==============================================================================
# ManManV2 (Go) - Database Models
# ==============================================================================

go_library(
    name = "models",
    srcs = ["models.go"],
    importpath = "github.com/whale-net/everything/manman",
    visibility = ["//visibility:public"],
)

# ==============================================================================
# ManMan V1 (Python) - Legacy Services
# ==============================================================================

# Re-export all manman modules for convenience
py_library(
    name = "manman",
    visibility = ["//visibility:public"],
    deps = [
        "//manman/src:manman_core",
        "//manman/src/host:manman_host",
        "//manman/src/migrations:manman_migrations",
        "//manman/src/repository:manman_repository",
        "//manman/src/worker:manman_worker",
    ],
)

# Release configurations for manman services
release_app(
    name = "experience-api",
    app_type = "external-api",
    args = ["start-experience-api"],
    binary_name = "//manman/src/host/api/experience:experience_api",
    description = "Experience API service for managing user experiences and workflows",
    domain = "manman",
    fastapi_app = "manman.src.host.api.experience:create_app",
    ingress_host = "experience.manman.local",
    ingress_tls_secret = "manman-tls",
    language = "python",
    port = 8000,
    replicas = 1,  # Single replica for development
)

release_app(
    name = "status-api",
    app_type = "internal-api",
    args = ["start-status-api"],
    binary_name = "//manman/src/host/api/status:status_api",
    description = "Status API service for monitoring and health checks",
    domain = "manman",
    fastapi_app = "manman.src.host.api.status:create_app",
    language = "python",
    port = 8000,
    replicas = 1,  # Single replica for development
)

release_app(
    name = "worker-dal-api",
    app_type = "external-api",
    args = ["start-worker-dal-api"],
    binary_name = "//manman/src/host/api/worker_dal:worker_dal_api",
    description = "Worker DAL API service for data access layer operations",
    domain = "manman",
    fastapi_app = "manman.src.host.api.worker_dal:create_app",
    ingress_host = "dal.manman.local",
    ingress_tls_secret = "manman-tls",
    language = "python",
    port = 8000,
    replicas = 1,  # Single replica for development
)

release_app(
    name = "status-processor",
    app_type = "internal-api",
    args = ["start-status-processor"],
    binary_name = "//manman/src/host:status_processor",
    description = "Status processor service for background status processing",
    domain = "manman",
    language = "python",
    port = 8000,
    replicas = 1,  # Single replica for development
)

release_app(
    name = "worker",
    additional_tars = ["//tools/steamcmd:steamcmd_layers"],
    app_type = "worker",
    args = ["start"],
    binary_name = "//manman/src/worker:worker",
    description = "Background worker service for processing tasks and messages",
    domain = "manman",
    language = "python",
    replicas = 1,  # Single replica for development
)

release_app(
    name = "migration",
    app_type = "job",
    args = ["run-migration"],  # Pass the migration command as container args
    binary_name = "//manman/src/host:migration",
    description = "Database migration job for schema updates",
    domain = "manman",
    language = "python",
    replicas = 1,  # Jobs always run once
)

release_app(
    name = "management-ui",
    app_type = "external-api",
    binary_name = "//manman/management-ui:management-ui",
    description = "HTMX-based web interface for managing ManMan services with OIDC authentication",
    domain = "manman",
    ingress_host = "manage.manman.local",
    ingress_tls_secret = "manman-tls",
    language = "go",
    port = 8000,
    replicas = 1,  # Single replica for development
)

# ==============================================================================
# OpenAPI Client Generation
# Auto-generated clients for ManMan APIs using specs from release_app
# ==============================================================================

# Compatibility aliases for OpenAPI specs (auto-generated by release_app above)
alias(
    name = "experience_api_spec",
    actual = ":experience-api_openapi_spec",
    visibility = ["//visibility:public"],
)

alias(
    name = "status_api_spec",
    actual = ":status-api_openapi_spec",
    visibility = ["//visibility:public"],
)

alias(
    name = "worker_dal_api_spec",
    actual = ":worker-dal-api_openapi_spec",
    visibility = ["//visibility:public"],
)

# ==============================================================================
# Helm Chart Composition
# ==============================================================================

# List of all manman V1 app metadata targets for chart composition
# Update this list when adding or removing services
# Note: worker is excluded as it will be deployed outside the cloud
MANMAN_V1_APPS = [
    ":experience-api_metadata",
    ":status-api_metadata",
    ":worker-dal-api_metadata",
    ":status-processor_metadata",
    ":migration_metadata",
    ":management-ui_metadata",
]

# List of ManManV2 (Go) app metadata targets for chart composition
MANMAN_V2_APPS = [
    "//manman/api:manmanv2-api_metadata",
    "//manman/migrate:manmanv2-migration_metadata",
    "//manman/processor:manmanv2-processor_metadata",
]

# ManMan V1 Helm chart - Python-based legacy services
# Chart tags will use the format: helm-manman-host-services.vX.Y.Z
release_helm_chart(
    name = "manman_chart",
    apps = MANMAN_V1_APPS,
    chart_name = "host-services",
    domain = "manman",
    environment = "dev",
    namespace = "manman",
    # chart_version omitted - uses default "0.0.0-dev" for local builds
    # Release system auto-versions from git tags (helm-manman-host-services.v*)
    visibility = ["//visibility:public"],
)

# ManManV2 Helm chart - Go-based control plane services
# This is a separate chart for the V2 rewrite with distinct deployment lifecycle
# Chart tags will use the format: helm-manmanv2.vX.Y.Z
release_helm_chart(
    name = "manmanv2_chart",
    apps = MANMAN_V2_APPS,
    chart_name = "manmanv2",
    domain = "manman",
    environment = "dev",
    namespace = "manmanv2",
    # chart_version omitted - uses default "0.0.0-dev" for local builds
    # Release system auto-versions from git tags (helm-manmanv2.v*)
    visibility = ["//visibility:public"],
)

# Note: Manual helm charts are provided in manman/charts/manman-host/
# Those charts offer more sophisticated configuration for production deployments

filegroup(
    name = "tiltfile",
    srcs = ["Tiltfile"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "charts",
    srcs = glob(
        ["charts/**/*"],
        allow_empty = True,
    ),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "design_docs",
    srcs = glob(["design/**/*"]),
    visibility = ["//visibility:public"],
)
