# Tools and shared build rules for the monorepo

# Load platform definitions
load("//tools/bazel:platforms.bzl", "define_platforms")

package(default_visibility = ["//visibility:public"])

define_platforms()

# Platform detection for release helper selection
config_setting(
    name = "on_macos_arm64",
    constraint_values = [
        "@platforms//os:macos",
        "@platforms//cpu:arm64",
    ],
)

config_setting(
    name = "on_macos_x86_64",
    constraint_values = [
        "@platforms//os:macos",
        "@platforms//cpu:x86_64",
    ],
)

config_setting(
    name = "on_linux_arm64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:arm64",
    ],
)

# Note: Both arm64 and aarch64 configs are provided for compatibility.
# Different Bazel configurations and toolchains may use either naming convention.
# Both point to the same ARM64 architecture to ensure the correct binary is selected.
config_setting(
    name = "on_linux_aarch64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:aarch64",
    ],
)

config_setting(
    name = "on_linux_x86_64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
)

# Convenient alias for release helper
# Uses the standard binary - no platform-specific targets needed
alias(
    name = "release",
    actual = "//tools/release_helper:release_helper",
    visibility = ["//visibility:public"],
)

# Test suite for cross-compilation (now in scripts/)
# Use test_suite instead of alias so 'bazel test' works correctly
# Has 'manual' tag to prevent running with //... in regular test job
# Container arch job explicitly targets this test
test_suite(
    name = "test_cross_compilation",
    tags = [
        "image-integration",  # Image integration test for container architecture verification
        "integration",  # Integration test, not unit test
        "manual",  # Don't run with //... - explicitly targeted in container-arch CI job
    ],
    tests = ["//tools/scripts:test_cross_compilation"],
    visibility = ["//visibility:public"],
)

# Alias for version resolver (now in scripts/)
alias(
    name = "version_resolver",
    actual = "//tools/scripts:version_resolver",
    visibility = ["//visibility:public"],
)

# Alias for openapi_gen_wrapper (now in openapi/)
alias(
    name = "openapi_gen_wrapper",
    actual = "//tools/openapi:openapi_gen_wrapper",
    visibility = ["//visibility:public"],
)
