# Tools and shared build rules for the monorepo

# Load platform definitions
load("//tools/bazel:platforms.bzl", "define_platforms")
load("@rules_python//python:defs.bzl", "py_binary")

package(default_visibility = ["//visibility:public"])

define_platforms()

# Convenient alias for release helper (Go rewrite)
alias(
    name = "release",
    actual = "//tools/release_helper_go:release_helper_go",
    visibility = ["//visibility:public"],
)

# Test suite for cross-compilation (now in scripts/)
# Use test_suite instead of alias so 'bazel test' works correctly
# Has 'manual' tag to prevent running with //... in regular test job
# Container arch job explicitly targets this test
test_suite(
    name = "test_cross_compilation",
    tags = [
        "image-integration",  # Image integration test for container architecture verification
        "integration",  # Integration test, not unit test
        "manual",  # Don't run with //... - explicitly targeted in container-arch CI job
    ],
    tests = ["//tools/scripts:test_cross_compilation"],
    visibility = ["//visibility:public"],
)

# Alias for version resolver (now in scripts/)
alias(
    name = "version_resolver",
    actual = "//tools/scripts:version_resolver",
    visibility = ["//visibility:public"],
)

# Alias for openapi_gen_wrapper (now in openapi/)
alias(
    name = "openapi_gen_wrapper",
    actual = "//tools/openapi:openapi_gen_wrapper",
    visibility = ["//visibility:public"],
)

# Code generator: chips.yaml → chip_catalog.h
py_binary(
    name = "gen_chip_catalog",
    srcs = ["gen_chip_catalog.py"],
    main = "gen_chip_catalog.py",
    deps = [
        "@pypi//:pyyaml",
        "@rules_python//python/runfiles",
    ],
    visibility = ["//visibility:public"],
)
