"""Blink demo — ELEGOO ESP32 firmware + host-side unit tests."""

load("//tools/bazel:esp32.bzl", "esp32_firmware")
load("@rules_cc//cc:defs.bzl", "cc_test")

# ── Firmware targets (ESP32 only) ────────────────────────────────────────────
# Build:  bazel build //demo/blink:blink_bin --config=esp32
# Flash:  bazel run  //demo/blink:flash -- /dev/ttyUSB0
#
# esp32_firmware() generates:
#   blink_lib — cc_library (sketch + board_pins)
#   blink_elf — ELF binary (Xtensa, inspect with readelf / objdump)
#   blink_bin — flashable .bin (esptool elf2image)
#   flash     — universal flash target (from flash_firmware() in flash.bzl)

esp32_firmware(
    name = "blink",
    srcs = ["blink.cc"],
)

# ── Host-side unit tests (no hardware needed) ────────────────────────────────
# Usage:  bazel test //demo/blink:blink_logic_test

cc_test(
    name = "blink_logic_test",
    srcs = ["blink_logic_test.cc"],
    deps = [
        "@pigweed//pw_unit_test",
        "@pigweed//pw_unit_test:logging_main",
    ],
)
