load("@rules_python//python:defs.bzl", "py_binary", "py_library", "py_test")
load("//tools/bazel:release.bzl", "release_app")

py_library(
    name = "main_lib",
    srcs = ["__init__.py", "main.py"],
    deps = [
        "@pypi//:fastapi",
        "@pypi//:uvicorn",
    ],
    visibility = ["//demo/hello_fastapi:__pkg__"],
)

# Manual Kubernetes manifests
filegroup(
    name = "k8s_manifests",
    srcs = [
        "configmap.yaml",
        "networkpolicy.yaml",
    ],
    tags = ["k8s_manifests"],
    visibility = ["//visibility:public"],
)

py_binary(
    name = "hello-fastapi",
    srcs = ["main.py"],
    main = "main.py",
    deps = [":main_lib"],
    visibility = ["//visibility:public"],
)

py_test(
    name = "test_main",
    srcs = ["test_main.py"],
    main = "test_main.py",
    deps = [
        ":main_lib",
        "@pypi//:pytest",
        "@pypi//:httpx",
    ],
)

release_app(
    name = "hello-fastapi",
    language = "python",
    domain = "demo",
    description = "FastAPI hello world application with uvicorn",
    app_type = "external-api",
    fastapi_app = "demo.hello_fastapi.main:app",
)