load("@rules_go//go:def.bzl", "go_test")
load("//tools:go_binary.bzl", "multiplatform_go_binary")
load("//tools:release.bzl", "release_app")

# Single macro generates all platform-specific binaries
multiplatform_go_binary(
    name = "hello_go",
    srcs = ["main.go"],
    deps = ["//libs/go"],
    app_type = "worker",
    visibility = ["//visibility:public"],
)

go_test(
    name = "main_test",
    srcs = ["main_test.go"],
    deps = ["//libs/go"],
    size = "small",
)

# Release metadata and OCI images for this app
release_app(
    name = "hello_go",
    language = "go",
    domain = "demo",
    description = "Go hello world application with static binaries",
)
