load("@rules_go//go:def.bzl", "go_binary", "go_test")
load("//tools/bazel:release.bzl", "release_app")

# Standard go_binary - no wrapper needed!
go_binary(
    name = "hello-go",
    srcs = ["main.go"],
    deps = ["//libs/go"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "main_test",
    srcs = ["main_test.go"],
    deps = ["//libs/go"],
    size = "small",
)

# Release metadata and OCI images for this app
release_app(
    name = "hello-go",
    language = "go",
    domain = "demo",
    description = "Go hello world application with static binaries",
    app_type = "worker",
)
