load("@rules_go//go:def.bzl", "go_binary", "go_test")
load("//tools/bazel:release.bzl", "release_app")

go_binary(
    name = "hello-go-logging",
    srcs = ["main.go"],
    deps = [
        "//libs/go/logging",
        "@io_opentelemetry_go_otel//attribute",
        "@io_opentelemetry_go_otel_metric//:metric",
    ],
    visibility = ["//visibility:public"],
)

go_test(
    name = "main_test",
    srcs = ["main_test.go"],
    deps = [
        "//libs/go/logging",
        "@io_opentelemetry_go_otel//:otel",
        "@io_opentelemetry_go_otel_sdk//trace",
        "@io_opentelemetry_go_otel_sdk//trace/tracetest",
    ],
    size = "small",
)

release_app(
    name = "hello-go-logging",
    language = "go",
    domain = "demo",
    description = "Go structured logging, tracing, and metrics demo with OTel support",
    app_type = "worker",
)
