load("@rules_python//python:defs.bzl", "py_library", "py_test")
load("//tools:python_binary.bzl", "multiplatform_py_binary")
load("//tools:release.bzl", "release_app")

py_library(
    name = "main_lib",
    srcs = ["__init__.py", "main.py"],
    deps = [
        "@pypi//:fastapi",
        "@pypi//:uvicorn",
    ],
    visibility = ["//demo/hello_internal_api:__pkg__"],
)

multiplatform_py_binary(
    name = "hello_internal_api",
    srcs = ["main.py"],
    main = "main.py",
    deps = [":main_lib"],
    visibility = ["//visibility:public"],
)

py_test(
    name = "test_main",
    srcs = ["test_main.py"],
    main = "test_main.py",
    deps = [
        ":main_lib",
        "@pypi//:pytest",
        "@pypi//:httpx",
    ],
)

release_app(
    name = "hello_internal_api",
    language = "python",
    domain = "demo",
    description = "Internal FastAPI service - accessible within cluster only",
    app_type = "internal-api",
)
