load("@rules_python//python:defs.bzl", "py_binary", "py_library", "py_test")
load("//tools/bazel:release.bzl", "release_app")

py_library(
    name = "main_lib",
    srcs = ["__init__.py", "main.py"],
    deps = [
        "@pypi//:fastapi",
        "@pypi//:uvicorn",
    ],
    visibility = ["//demo/hello_internal_api:__pkg__"],
)

py_binary(
    name = "hello-internal-api",
    srcs = ["main.py"],
    main = "main.py",
    deps = [":main_lib"],
    visibility = ["//visibility:public"],
)

py_test(
    name = "test_main",
    srcs = ["test_main.py"],
    main = "test_main.py",
    deps = [
        ":main_lib",
        "@pypi//:pytest",
        "@pypi//:httpx",
    ],
)

release_app(
    name = "hello-internal-api",
    language = "python",
    domain = "demo",
    description = "Internal FastAPI service - accessible within cluster only",
    app_type = "internal-api",
    port = 8000,
)
