load("@rules_python//python:defs.bzl", "py_library", "py_test")
load("//tools:python_binary.bzl", "multiplatform_py_binary")
load("//tools:release.bzl", "release_app")

py_library(
    name = "main_lib",
    srcs = ["__init__.py", "main.py"],
    deps = [],
    visibility = ["//demo/hello_job:__pkg__"],
)

# Single macro generates all platform-specific binaries
multiplatform_py_binary(
    name = "hello_job",
    srcs = ["main.py"],
    main = "main.py",
    deps = [
        ":main_lib",
    ],
    requirements = [],  # No external requirements for this simple app
    visibility = ["//visibility:public"],
)

py_test(
    name = "test_main",
    srcs = ["test_main.py"],
    deps = [
        ":main_lib",
        "@pypi//:pytest",
    ],
    size = "small",
)

# Simplified release_app - auto-detects platform binaries!
release_app(
    name = "hello_job",
    language = "python",
    app_type = "job",  # Explicitly set as job
    domain = "demo",
    registry = "ghcr.io",
    version = "1.0.0",
    description = "Migration job example - pre-install hook",
)
