load("@rules_python//python:defs.bzl", "py_binary", "py_library", "py_test")
load("//tools:release.bzl", "release_app", "release_helm_chart")

py_library(
    name = "main_lib",
    srcs = ["__init__.py", "main.py"],
    deps = [],
    visibility = ["//demo/hello_job:__pkg__"],
)

py_binary(
    name = "hello_job",
    srcs = ["main.py"],
    main = "main.py",
    deps = [":main_lib"],
    visibility = ["//visibility:public"],
)

py_test(
    name = "test_main",
    srcs = ["test_main.py"],
    deps = [
        ":main_lib",
        "@pypi//:pytest",
    ],
    size = "small",
)

# Simplified release_app - auto-detects platform binaries!
release_app(
    name = "hello_job",
    language = "python",
    app_type = "job",  # Explicitly set as job
    domain = "demo",
    registry = "ghcr.io",
    version = "1.0.0",
    description = "Migration job example - pre-install hook",
)

# Helm chart for hello_job (for testing job disablement)
release_helm_chart(
    name = "hello_job_chart",
    apps = [":hello_job_metadata"],
    chart_name = "hello_job",
    namespace = "demo",
    environment = "dev",
    domain = "demo",
    visibility = ["//visibility:public"],
)
