load("@rules_python//python:defs.bzl", "py_binary", "py_test")

py_binary(
    name = "hello_logging",
    srcs = ["main.py"],
    main = "main.py",
    visibility = ["//visibility:public"],
    deps = [
        "//libs/python/logging",
    ],
)

py_test(
    name = "test_main",
    size = "small",
    srcs = ["test_main.py"],
    deps = [
        ":hello_logging",
        "//libs/python/logging",
    ],
)
