load("@rules_go//go:def.bzl", "go_binary", "go_test")
load("//tools/bazel:release.bzl", "release_app")

go_binary(
    name = "hello-observability",
    srcs = ["main.go"],
    deps = ["//libs/go/observability"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "main_test",
    srcs = ["main_test.go"],
    embed = [":hello-observability"],
    deps = ["//libs/go/observability"],
    size = "small",
)

# Release metadata and OCI images for this app
release_app(
    name = "hello-observability",
    language = "go",
    domain = "demo",
    description = "Demo application showing observability library usage with logging and tracing",
    app_type = "worker",
)
