load("//tools:pytest.bzl", "py_test")
load("@rules_python//python:defs.bzl", "py_library")
load("//tools:python_binary.bzl", "multiplatform_py_binary")
load("//tools:release.bzl", "release_app")

py_library(
    name = "main_lib",
    srcs = ["__init__.py", "main.py"],
    deps = ["//libs/python"],
    visibility = ["//demo/hello_python:__pkg__"],
)

# Single macro generates all platform-specific binaries
multiplatform_py_binary(
    name = "hello_python",
    srcs = ["main.py"],
    main = "main.py",
    deps = [
        ":main_lib",
        "//libs/python",
    ],
    visibility = ["//visibility:public"],
)

py_test(
    name = "test_main",
    srcs = ["test_main.py"],
    deps = [
        ":main_lib",
        "@pypi//:pytest",
    ],
    size = "small",
)

# Simplified release_app - auto-detects platform binaries!
release_app(
    name = "hello_python",
    language = "python",
    domain = "demo",
    description = "Python hello world application with pytest",
    app_type = "worker",
)
