load("//tools:pytest.bzl", "py_test")
load("@rules_python//python:defs.bzl", "py_library", "py_binary")
load("//tools:release.bzl", "release_app")

py_library(
    name = "main_lib",
    srcs = ["__init__.py", "main.py"],
    deps = ["//libs/python"],
    visibility = ["//demo/hello_python:__pkg__"],
)

# Standard py_binary - no wrapper needed!
py_binary(
    name = "hello_python",
    srcs = ["main.py"],
    main = "main.py",
    deps = [
        ":main_lib",
        "//libs/python",
    ],
    visibility = ["//visibility:public"],
)

py_test(
    name = "test_main",
    srcs = ["test_main.py"],
    deps = [
        ":main_lib",
        "@pypi//:pytest",
    ],
    size = "small",
)

# Release metadata and container images
release_app(
    name = "hello_python",
    language = "python",
    domain = "demo",
    description = "Python hello world application with pytest",
    app_type = "worker",
)