load("@rules_python//python:defs.bzl", "py_binary", "py_library", "py_test")
load("//tools:release.bzl", "release_app")

py_library(
    name = "main_lib",
    srcs = ["__init__.py", "main.py"],
    deps = [],
    visibility = ["//demo/hello_worker:__pkg__"],
)

py_binary(
    name = "hello_worker",
    srcs = ["main.py"],
    main = "main.py",
    deps = [":main_lib"],
    visibility = ["//visibility:public"],
)

py_test(
    name = "test_main",
    srcs = ["test_main.py"],
    deps = [
        ":main_lib",
        "@pypi//:pytest",
    ],
    size = "small",
)

# Simplified release_app - auto-detects platform binaries!
release_app(
    name = "hello_worker",
    language = "python",
    app_type = "worker",  # Explicitly set as worker
    domain = "demo",
    registry = "ghcr.io",
    version = "1.0.0",
    description = "Background worker example - no service exposure",
)
