load("@rules_python//python:defs.bzl", "py_library", "py_test")
load("//tools:python_binary.bzl", "multiplatform_py_binary")
load("//tools:release.bzl", "release_app")

py_library(
    name = "main_lib",
    srcs = ["__init__.py", "main.py"],
    deps = ["//libs/python"],
    visibility = ["//demo/hello_world_test:__pkg__"],
)

multiplatform_py_binary(
    name = "hello_world_test",
    srcs = ["main.py"],
    main = "main.py",
    deps = [
        ":main_lib",
        "//libs/python",
    ],
    requirements = [],  # No external requirements for this app
    visibility = ["//visibility:public"],
)

py_test(
    name = "test_main",
    srcs = ["test_main.py"],
    deps = [
        ":main_lib",
        "@pypi//:pytest",
    ],
    size = "small",
)

# Simplified release_app - auto-detects platform binaries!
release_app(
    name = "hello_world_test",
    language = "python",
    domain = "demo",
    description = "Python hello world test application for documentation validation",
    app_type = "worker",
)